修改静态文件路径

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>系统登录</title>
-  <link rel="stylesheet" href="plugins/css/googleapis.css">
-  <link rel="stylesheet" href="plugins/css/all.min.css">
-  <link rel="stylesheet" href="plugins/css/icheck-bootstrap.min.css">
-  <link rel="stylesheet" href="plugins/css/adminlte.min.css">
+  <link rel="stylesheet" href="css/googleapis.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/icheck-bootstrap.min.css">
+  <link rel="stylesheet" href="css/adminlte.min.css">
 </head>
 <body class="hold-transition login-page">
 <div class="login-box">
   <div class="login-logo">
-    <a href="../../index2.html"><b>Admin</b>LTE</a>
+   <b>后台登陆</b>
   </div>
   <!-- /.login-logo -->
   <div class="card">
@@ -72,8 +72,8 @@
     <!-- /.login-card-body -->
   </div>
 </div>
-<script src="plugins/js/jquery/jquery.min.js"></script>
-<script src="plugins/js/bootstrap/bootstrap.bundle.min.js"></script>
-<script src="plugins/js/adminlte.min.js"></script>
+<script src="js/jquery/jquery.min.js"></script>
+<script src="js/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="js/adminlte.min.js"></script>
 </body>
 </html>
