--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,15 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>主页</title>
-
-  <!-- Google Font: Source Sans Pro -->
-  <link rel="stylesheet" href="static/css/googleapis.css">
-  <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="static/css/all.min.css">
-  <!-- overlayScrollbars -->
-  <link rel="stylesheet" href="static/css/OverlayScrollbars.min.css">
-  <!-- Theme style -->
-  <link rel="stylesheet" href="static/css/adminlte.min.css">
+  <link rel="stylesheet" href="css/googleapis.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <link rel="stylesheet" href="css/OverlayScrollbars.min.css">
+  <link rel="stylesheet" href="css/adminlte.min.css">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed layout-navbar-fixed layout-footer-fixed">
 <div class="wrapper">
@@ -50,7 +45,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="static/images/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
+              <img src="images/user1-128x128.jpg" alt="User Avatar" class="img-size-50 mr-3 img-circle">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Brad Diesel
@@ -66,7 +61,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="static/images/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="images/user8-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   John Pierce
@@ -82,7 +77,7 @@
           <a href="#" class="dropdown-item">
             <!-- Message Start -->
             <div class="media">
-              <img src="static/images/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
+              <img src="images/user3-128x128.jpg" alt="User Avatar" class="img-size-50 img-circle mr-3">
               <div class="media-body">
                 <h3 class="dropdown-item-title">
                   Nora Silvester
@@ -140,7 +135,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index.html" class="brand-link">
-      <img src="static/images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="images/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">后台管理</span>
     </a>
 
@@ -149,7 +144,7 @@
       <!-- Sidebar user panel (optional) -->
       <div class="user-panel mt-3 pb-3 mb-3 d-flex">
         <div class="image">
-          <img src="static/images/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+          <img src="images/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
         </div>
         <div class="info">
           <a href="#" class="d-block">管理员</a>
@@ -983,7 +978,7 @@
                           <span class="direct-chat-timestamp float-right">23 Jan 2:00 pm</span>
                         </div>
                         <!-- /.direct-chat-infos -->
-                        <img class="direct-chat-img" src="static/images/user1-128x128.jpg" alt="message user image">
+                        <img class="direct-chat-img" src="images/user1-128x128.jpg" alt="message user image">
                         <!-- /.direct-chat-img -->
                         <div class="direct-chat-text">
                           Is this template really for free? That's unbelievable!
@@ -999,7 +994,7 @@
                           <span class="direct-chat-timestamp float-left">23 Jan 2:05 pm</span>
                         </div>
                         <!-- /.direct-chat-infos -->
-                        <img class="direct-chat-img" src="static/images/user3-128x128.jpg" alt="message user image">
+                        <img class="direct-chat-img" src="images/user3-128x128.jpg" alt="message user image">
                         <!-- /.direct-chat-img -->
                         <div class="direct-chat-text">
                           You better believe it!
@@ -1015,7 +1010,7 @@
                           <span class="direct-chat-timestamp float-right">23 Jan 5:37 pm</span>
                         </div>
                         <!-- /.direct-chat-infos -->
-                        <img class="direct-chat-img" src="static/images/user1-128x128.jpg" alt="message user image">
+                        <img class="direct-chat-img" src="images/user1-128x128.jpg" alt="message user image">
                         <!-- /.direct-chat-img -->
                         <div class="direct-chat-text">
                           Working with AdminLTE on a great new app! Wanna join?
@@ -1031,7 +1026,7 @@
                           <span class="direct-chat-timestamp float-left">23 Jan 6:10 pm</span>
                         </div>
                         <!-- /.direct-chat-infos -->
-                        <img class="direct-chat-img" src="static/images/user3-128x128.jpg" alt="message user image">
+                        <img class="direct-chat-img" src="images/user3-128x128.jpg" alt="message user image">
                         <!-- /.direct-chat-img -->
                         <div class="direct-chat-text">
                           I would love to.
@@ -1048,7 +1043,7 @@
                       <ul class="contacts-list">
                         <li>
                           <a href="#">
-                            <img class="contacts-list-img" src="static/images/user1-128x128.jpg" alt="User Avatar">
+                            <img class="contacts-list-img" src="images/user1-128x128.jpg" alt="User Avatar">
 
                             <div class="contacts-list-info">
                               <span class="contacts-list-name">
@@ -1063,7 +1058,7 @@
                         <!-- End Contact Item -->
                         <li>
                           <a href="#">
-                            <img class="contacts-list-img" src="static/images/user7-128x128.jpg" alt="User Avatar">
+                            <img class="contacts-list-img" src="images/user7-128x128.jpg" alt="User Avatar">
 
                             <div class="contacts-list-info">
                               <span class="contacts-list-name">
@@ -1078,7 +1073,7 @@
                         <!-- End Contact Item -->
                         <li>
                           <a href="#">
-                            <img class="contacts-list-img" src="static/images/user3-128x128.jpg" alt="User Avatar">
+                            <img class="contacts-list-img" src="images/user3-128x128.jpg" alt="User Avatar">
 
                             <div class="contacts-list-info">
                               <span class="contacts-list-name">
@@ -1093,7 +1088,7 @@
                         <!-- End Contact Item -->
                         <li>
                           <a href="#">
-                            <img class="contacts-list-img" src="static/images/user5-128x128.jpg" alt="User Avatar">
+                            <img class="contacts-list-img" src="images/user5-128x128.jpg" alt="User Avatar">
 
                             <div class="contacts-list-info">
                               <span class="contacts-list-name">
@@ -1108,7 +1103,7 @@
                         <!-- End Contact Item -->
                         <li>
                           <a href="#">
-                            <img class="contacts-list-img" src="static/images/user6-128x128.jpg" alt="User Avatar">
+                            <img class="contacts-list-img" src="images/user6-128x128.jpg" alt="User Avatar">
 
                             <div class="contacts-list-info">
                               <span class="contacts-list-name">
@@ -1123,7 +1118,7 @@
                         <!-- End Contact Item -->
                         <li>
                           <a href="#">
-                            <img class="contacts-list-img" src="static/images/user8-128x128.jpg" alt="User Avatar">
+                            <img class="contacts-list-img" src="images/user8-128x128.jpg" alt="User Avatar">
 
                             <div class="contacts-list-info">
                               <span class="contacts-list-name">
@@ -1178,42 +1173,42 @@
                   <div class="card-body p-0">
                     <ul class="users-list clearfix">
                       <li>
-                        <img src="static/images/user1-128x128.jpg" alt="User Image">
+                        <img src="images/user1-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Alexander Pierce</a>
                         <span class="users-list-date">Today</span>
                       </li>
                       <li>
-                        <img src="static/images/user8-128x128.jpg" alt="User Image">
+                        <img src="images/user8-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Norman</a>
                         <span class="users-list-date">Yesterday</span>
                       </li>
                       <li>
-                        <img src="static/images/user7-128x128.jpg" alt="User Image">
+                        <img src="images/user7-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Jane</a>
                         <span class="users-list-date">12 Jan</span>
                       </li>
                       <li>
-                        <img src="static/images/user6-128x128.jpg" alt="User Image">
+                        <img src="images/user6-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">John</a>
                         <span class="users-list-date">12 Jan</span>
                       </li>
                       <li>
-                        <img src="static/images/user2-160x160.jpg" alt="User Image">
+                        <img src="images/user2-160x160.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Alexander</a>
                         <span class="users-list-date">13 Jan</span>
                       </li>
                       <li>
-                        <img src="static/images/user5-128x128.jpg" alt="User Image">
+                        <img src="images/user5-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Sarah</a>
                         <span class="users-list-date">14 Jan</span>
                       </li>
                       <li>
-                        <img src="static/images/user4-128x128.jpg" alt="User Image">
+                        <img src="images/user4-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Nora</a>
                         <span class="users-list-date">15 Jan</span>
                       </li>
                       <li>
-                        <img src="static/images/user3-128x128.jpg" alt="User Image">
+                        <img src="images/user3-128x128.jpg" alt="User Image">
                         <a class="users-list-name" href="#">Nadia</a>
                         <span class="users-list-date">15 Jan</span>
                       </li>
@@ -1463,7 +1458,7 @@
                 <ul class="products-list product-list-in-card pl-2 pr-2">
                   <li class="item">
                     <div class="product-img">
-                      <img src="static/images/default-150x150.png" alt="Product Image" class="img-size-50">
+                      <img src="images/default-150x150.png" alt="Product Image" class="img-size-50">
                     </div>
                     <div class="product-info">
                       <a href="javascript:void(0)" class="product-title">Samsung TV
@@ -1476,7 +1471,7 @@
                   <!-- /.item -->
                   <li class="item">
                     <div class="product-img">
-                      <img src="static/images/default-150x150.png" alt="Product Image" class="img-size-50">
+                      <img src="images/default-150x150.png" alt="Product Image" class="img-size-50">
                     </div>
                     <div class="product-info">
                       <a href="javascript:void(0)" class="product-title">Bicycle
@@ -1489,7 +1484,7 @@
                   <!-- /.item -->
                   <li class="item">
                     <div class="product-img">
-                      <img src="static/images/default-150x150.png" alt="Product Image" class="img-size-50">
+                      <img src="images/default-150x150.png" alt="Product Image" class="img-size-50">
                     </div>
                     <div class="product-info">
                       <a href="javascript:void(0)" class="product-title">
@@ -1505,7 +1500,7 @@
                   <!-- /.item -->
                   <li class="item">
                     <div class="product-img">
-                      <img src="static/images/default-150x150.png" alt="Product Image" class="img-size-50">
+                      <img src="images/default-150x150.png" alt="Product Image" class="img-size-50">
                     </div>
                     <div class="product-info">
                       <a href="javascript:void(0)" class="product-title">PlayStation 4
@@ -1550,20 +1545,20 @@
     </div>
   </footer>
 </div>
-<script src="static/js/jquery/jquery.min.js"></script>
-<script src="static/js/bootstrap/bootstrap.bundle.min.js"></script>
-<script src="static/js/jquery.overlayScrollbars.min.js"></script>
-<script src="static/js/adminlte.js"></script>
-<script src="static/js/jquery-mousewheel/jquery.mousewheel.js"></script>
-<script src="static/js/raphael/raphael.min.js"></script>
-<script src="static/js/jquery-mapael/jquery.mapael.min.js"></script>
-<script src="static/js/jquery-mapael/maps/usa_states.min.js"></script>
+<script src="js/lib/jquery/jquery.min.js"></script>
+<script src="js/lib/bootstrap/bootstrap.bundle.min.js"></script>
+<script src="js/jquery.overlayScrollbars.min.js"></script>
+<script src="js/adminlte.js"></script>
+<script src="js/lib/jquery-mousewheel/jquery.mousewheel.js"></script>
+<script src="js/lib/raphael/raphael.min.js"></script>
+<script src="js/lib/jquery-mapael/jquery.mapael.min.js"></script>
+<script src="js/lib/jquery-mapael/maps/usa_states.min.js"></script>
 <!-- ChartJS -->
-<script src="static/js/chart/Chart.min.js"></script>
+<script src="js/lib/chart/Chart.min.js"></script>
 
 <!-- AdminLTE for demo purposes -->
-<script src="static/js/demo.js"></script>
+<script src="js/demo.js"></script>
 <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-<script src="static/js/dashboard.js"></script>
+<script src="js/dashboard.js"></script>
 </body>
 </html>
